@@ -1,5 +1,7 @@
 Changelog for Parse::Method::Signatures
 
+  - Will now build a Moose TC object for params
+
 1.001001 - 2009/01/31
   - Handle fat commas in TCs (for MooseX::Types::Structured's Dict)
   - Add missing dep on Test::Differences
